# mcmp3

./: CMakeLists.txt  README.md  client-main.cc
inc/: mcmp3.h
inc/mcmp3/: mp-log.h  mp-server.h  mp-types.h
src/: main.cc  mp-log.cc  mp-server.cc
